--- a/q/274938.html
+++ b/q/274938.html
@@ -26,23 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>JavaScript</td><td>240814T040231Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274966#274966">noodle p</a></td></tr>
-<tr d-ix="1"><td>085</td><td>R</td><td>240813T202411Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274962#274962">int 21h </a></td></tr>
-<tr d-ix="2"><td>052</td><td>APL+WIN</td><td>240813T170209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274959#274959">Graham</a></td></tr>
-<tr d-ix="3"><td>049</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
-<tr d-ix="4"><td>013</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>033</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
-<tr d-ix="6"><td>044</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
-<tr d-ix="7"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
-<tr d-ix="8"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
+<tr d-ix="0"><td>052</td><td>R</td><td>240814T114338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274970#274970">Dominic </a></td></tr>
+<tr d-ix="1"><td>047</td><td>JavaScript</td><td>240814T040231Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274966#274966">noodle p</a></td></tr>
+<tr d-ix="2"><td>085</td><td>R</td><td>240813T202411Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274962#274962">int 21h </a></td></tr>
+<tr d-ix="3"><td>052</td><td>APL+WIN</td><td>240813T170209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274959#274959">Graham</a></td></tr>
+<tr d-ix="4"><td>049</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
+<tr d-ix="5"><td>013</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>033</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
+<tr d-ix="7"><td>044</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="8"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
+<tr d-ix="9"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, <s>50</s> 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 52 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(n,l,w,h,g=l/w)h*w*((h*l+w-l-1)/2+n%/%g*l*h+n%%g*w)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMHKisrkjNK87GLbpaUlaboWN01iNPJ0cnTKdTJ00m1z9Ms1M7TKtTQ0MrRytMt1c3QNNfWNtPNU9VXTtXK0MoAsIKNcE6pXqTixoCCnUsPAytBAB2awTo6toZFOua2xToatCVTlggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Started from:</p>
+<pre><code>xychunks=
+function(n,l,w,h){
+    startpos=n%%(l/w)*w+n%/%(l/w)*h*l
+    increment=outer(1:w-1,(1:h-1)*l,`+`)
+    sum(startpos+increment)
+}
+</code></pre>
+<p>and gradually re-arranged from there.</p>
+<p>The final golfed form seems quite similar to some answers in other languages, and I suspect that different initial approaches will converge to similar shortest re-arranged structures...</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript, <s>50</s> 47 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*(x*n/w*w*y+(w*~-y+~-x)/2n+x*n%w)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LYtBCsIwEABfI2w2G2MVQbHxM9pIoOyCVja59CO9BNFH-RsL9jJzGGZ6s1y7-orh8xyiO3w9MGUqpCacMxaEjOwVFYsFxdEVO7ps_JbtHFZqls1FuUMKGz6ltmlmWmsuwg_pu3UvN4iQaMe0ZzqyWaZa__4B" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as BigInts. I think this uses a bit of a different method from emanresu A's solution, but I haven't quite figured out how hers works yet.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,y,w,`[`=matrix,s=colSums)repeat print(s(s(((y*w*F):(y*w*(F&lt;-F+1)-1))[x])[y,b=T]))
 </code></pre>
 <p>Just to see the source and the bytecount:
@@ -71,13 +87,13 @@
 </code></pre>
 <p>Proceed with the next part of the sequence <code>Y*W</code> to <code>2*Y*W-1</code> etc.</p>
 </div>
-<div id="pu2" class="pu"><h1>APL+WIN, 52 bytes</h1>
+<div id="pu3" class="pu"><h1>APL+WIN, 52 bytes</h1>
 <p>Prompts for a vector of n,x,y and w/x. Outputs first n terms. Index origin = 0</p>
 <pre><code>(n x y w)←⎕⋄n↑,+⌿[1] +/¨(n,y,w)⍴(+\0=x|i)⊂i←⍳n×x×y×w
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv0aeQoVCpUK5JlAIKPWouyXvUdtEHe1HPfujDWMVtPUPrdDI06nUASro3aKhHWNgW1GTqfmoqykTpKF3c97h6RWHp1cenl7@H2ge1/80LiMFYwUTBRMudQV1rjQuUwVTJJ6hgYIhEJpBuUYGQDkjONcUxDWFcw0NDIBGmSoYw1UbgI02BgA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu3" class="pu"><h1>Python, <s>58</s> <s>54</s> <s>53</s> <s>51</s> 49 bytes</h1>
+<div id="pu4" class="pu"><h1>Python, <s>58</s> <s>54</s> <s>53</s> <s>51</s> 49 bytes</h1>
 <p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
 <p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
 <pre><code>lambda x,y,w,n:x*y*~(x*~(n*y*2-(n%w*2-w)*~-y))//2
@@ -86,7 +102,7 @@
 <pre><code>lambda x,y,w,n:x*y*~(x*~(n*y*2-(n%w*2-w)*~-y))/2
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞&lt;IôIô€øO˜IôO
 </code></pre>
 <p>-1 byte thanks to <em>@emanresuA</em>.</p>
@@ -108,12 +124,12 @@ Outputs the infinite sequence.</p>
                # (after which the infinite list is lazily output implicitly)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>38</s> 33 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>38</s> 33 bytes</h1>
 <pre><code>ＮθＮηＮζＮεＩ÷××θη⊖×θ⊕⁻⊗×εη×⁻⊗﹪εζζ⊖η²
 </code></pre>
 <p><a href="https://tio.run/##XY27DsIwDEV3viJjKoUF8Rg60qVDKwZ@oE0sJVLi0Dw69OdDAohCPVzp2OfKXA6O20Gn1OIjhj6aERydqnr3y3LDy4Yh880pDPQ6@EBbDI2alQB6Vwb8JydGZMVIA9yBAQwg1kOL67JTGD1tbBz1V4HSzeU3/RudFVHboixFWTY/cu81jBxy1ikdyYmcySXtZ/0E" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>X, Y, W/X, n</code> as inputs. Explanation: Looks like I've found the same closed formula. Really, verbose mode says it all, except of course the variables have to be called <code>q, h, z, and e</code> instead, just in case you want to save 8 bytes by requiring input in JSON format. Edit: Saved 5 bytes by porting @xnor's golf to @Lucenaposition's answer.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> <s>46</s> <s>45</s> 44 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> <s>46</s> <s>45</s> 44 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*(n*x*y+(--y*w+x-1)/2-n*x%w*y)
 </code></pre>
@@ -121,7 +137,7 @@ Outputs the infinite sequence.</p>
 <p>Simple numeric formula. They say a picture speaks a thousand words:</p>
 <p><a href="https://i.sstatic.net/53cUFrDH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/53cUFrDH.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>Þ∞‹ẇẇṠfẇṠ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLDnuKInuKAueG6h+G6h+G5oGbhuofhuaAiLCIiLCIxMlxuNFxuMyJd" rel="noreferrer">Try it Online!</a> Outputs an infinite list given w,y,x.</p>
@@ -131,7 +147,7 @@ Outputs the infinite sequence.</p>
       fẇṠ # Flatten, and sum groups of length x
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(x,y,w,n)=&gt;(g=i=&gt;i&amp;&amp;(i/w/x/y^n/w|i/x%w^n%w?0:i)+g(i-1))(x*w*~y*~n)
 </code></pre>
