--- a/q/274973.html
+++ b/q/274973.html
@@ -26,9 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
+<tr d-ix="0"><td>031</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 31 bytes</h1>
+<pre><code>zz(ysk$fo[h',hd&lt;*h'&gt;~sχ,h'])rv
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TY69boMwFIV3P8VpVImkggHokIH0GdijqDLYli1-TMFUNUPXbHmBLCxVHydz3iZWHNH6WvI5x9-9uudfSYeK1_V8zVXT6d7gY6S1Eooz5D2vR8bJ4yMnUYRWG-gW1GhYbogdKuxgbYkMQ0WGy9HZDlmGy_FnNCLaXp_EbprWDnwWei-DULLsRQZv344NZXDY9J8P8NRQ1bp2pgnQvGPd9W6q2DgH7LH6Wt1V6JQ7i1Ha1xLESfqaJvEfbSd__xNJnMZpsiS0KIuiZJxyXvrw4LeaZ__eAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>e/(.).*\1/Ï
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;code=ZS8oLikuKlwxL88&amp;input=ImFiY2JiY2RlYWVlYyI" rel="nofollow noreferrer">Try it</a></p>
