--- a/q/274973.html
+++ b/q/274973.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
+<tr d-ix="0"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
+<tr d-ix="1"><td>030</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> 30 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.).*\1/,&quot;$1&quot;))?s:f(s)
+</code></pre>
+<p><a href="https://tio.run/##hc3BCsIwDAbgu08xgodWtCWtJ6H6Il66LpPJsGMR2fbydbBDZQr@ySXwkf/uX55D33TPwyNWlFLt2J3ZOcGOVU9d6wMJLZRUuyvqPWwRpLzwqRYsU4gPji2pNt5ELWCAIkfKQuti2KzNHPhjmrgMZNPENUJjj9YgfDzCr7JxWhZy2Tj9@GTQojVZzcda@TKUZajIEwVYlKeQ3g" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> 30 bytes</h1>
 <pre><code>zz(ysk$fo[h',yS$hdS&lt;*h',h'])rv
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TU5LDoIwEN1zihdj4iewAFy4gI0nMGFpjCm0DQ2fIhRjOYQXcMPGeCZvY2MNOjPJvHnvzWTuz5x0BSvL8bUTVSNbhXNPSsEFo9i3rOwpc77C3vE81FJB1iBKQjPl6K5ADK0zROiKR6-4t32Bx8OwNNKcy0O-cHUyz2kSrQ3MF8dVe_n6bhURtVmn0gGqE5ZNa87wlZmAA2bX2Qe5BpmYBiFtToQfhJsw8H9uPdj6dwR-6IfBxJA0S9OMMsJYZsmj_WocbX8D" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -47,7 +54,7 @@
 And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>e/(.).*\1/Ï
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;code=ZS8oLikuKlwxL88&amp;input=ImFiY2JiY2RlYWVlYyI" rel="nofollow noreferrer">Try it</a></p>
