--- a/q/274973.html
+++ b/q/274973.html
@@ -26,33 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
-<tr d-ix="1"><td>030</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>029</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.).*\1/,&quot;$1&quot;))?s:f(s)
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> 29 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>k=Rv h'
 </code></pre>
-<p><a href="https://tio.run/##hc3BCsIwDAbgu08xgodWtCWtJ6H6Il66LpPJsGMR2fbydbBDZQr@ySXwkf/uX55D33TPwyNWlFLt2J3ZOcGOVU9d6wMJLZRUuyvqPWwRpLzwqRYsU4gPji2pNt5ELWCAIkfKQuti2KzNHPhjmrgMZNPENUJjj9YgfDzCr7JxWhZy2Tj9@GTQojVZzcda@TKUZajIEwVYlKeQ3g" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> 30 bytes</h1>
-<pre><code>zz(ysk$fo[h',yS$hdS&lt;*h',h'])rv
+<pre><code>ysk$fo[k,yS$hdS&lt;*k,k]
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TU5LDoIwEN1zihdj4iewAFy4gI0nMGFpjCm0DQ2fIhRjOYQXcMPGeCZvY2MNOjPJvHnvzWTuz5x0BSvL8bUTVSNbhXNPSsEFo9i3rOwpc77C3vE81FJB1iBKQjPl6K5ADK0zROiKR6-4t32Bx8OwNNKcy0O-cHUyz2kSrQ3MF8dVe_n6bhURtVmn0gGqE5ZNa87wlZmAA2bX2Qe5BpmYBiFtToQfhJsw8H9uPdj6dwR-6IfBxJA0S9OMMsJYZsmj_WocbX8D" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=TU4xjsIwEOz9ihFC4g4lRRKKK0jDCyIoEUJObCuWkzgkDsI8gg_QpEH3jHsHvzkLo9ztrrSzM7OrvX-XtFe8qsbnRtat7gxOA62kkJwh63g1ME7eQkbCEI020A2o0bDcENsrpLC2wBq9egxGhF8_Kt2eUS6ISJ08F3qvArubl2y3XqpAHbzreaupbNwy0wSoj_hoO3dEfLoJ2GN2mb1Q4JCLaZDa50REcbJK4ujPba--_jviKImSeGJoXuR5wTjlvPDk-6tx9P0X" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <h2>Explanation</h2>
 <p>We are using a parser to do this <code>ysk</code> will repeatedly apply a parser until reaching a fixed point, so we just need to write a parser which does one step of the task.</p>
-<p>Parsers generally prioritize parsing more than less, so to find the earliest occurence what we actually do is run everything in reverse. <code>zz</code> with <code>rv</code> sandwiches our parser between reversals. So now we want to eliminate the loop with the latest first value rather than the earliest second value.</p>
-<p>To do this we start with a <code>h'</code>, which will parse up to the start of the loop, prioritising longer parses (later starts). Then the loop itself is <code>yS$hdS&lt;*h'</code>, i.e. parse a character, parse some number of characters, parse the same character again returning only the last parse.  Then we have <code>h'</code> just to complete the rest of the string.</p>
+<p>As I point out in <a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#comment591483_274973">my comment</a> it doesn't matter if you prioritize loops by their start or end location.</p>
+<p>So we prioritize by the start. Parsers by default prioritize parsing more than less, so we create the parser <code>k=Rv h'</code> which acts as <code>h'</code> but with inverted priority.</p>
+<p>To do this we start with a <code>k</code>, which will parse up to the start of the loop. Then the loop itself is <code>yS$hdS&lt;k</code>, i.e. parse a character, parse some number of characters, parse the same character again returning only the last parse.  Then we have <code>k</code> just to complete the rest of the string, the inverted priority doesn't matter here.</p>
 <h1>Reflection</h1>
 <p>There's definitely some room for improvement on hgl that we see in this answer.</p>
 <ul>
 <li>This would be shorter with a regex if hgl flavored regexes could handle back-references. Implementing that is a big undertaking, but I always have to mention it.</li>
+<li>Since I am defining <code>k</code> here, there's probably good cause to have <code>Rv h'</code> as a built-in, and might as well add <code>Rv h_</code> too.</li>
 <li>There could be a function to sandwich a parser between two copies of another parser. Basically
 <pre><code>f x y = fo [x, y, x]
 </code></pre>
 And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
 </ul>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.).*\1/,&quot;$1&quot;))?s:f(s)
+</code></pre>
+<p><a href="https://tio.run/##hc3BCsIwDAbgu08xgodWtCWtJ6H6Il66LpPJsGMR2fbydbBDZQr@ySXwkf/uX55D33TPwyNWlFLt2J3ZOcGOVU9d6wMJLZRUuyvqPWwRpLzwqRYsU4gPji2pNt5ELWCAIkfKQuti2KzNHPhjmrgMZNPENUJjj9YgfDzCr7JxWhZy2Tj9@GTQojVZzcda@TKUZajIEwVYlKeQ3g" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>e/(.).*\1/Ï
